[feature/admin-actions]-Added more actions of admin

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -50,6 +50,12 @@ aside li a{
     text-decoration: none;
 }
 
+aside form button{
+    all: unset;
+    color: white;
+    cursor: pointer;
+}
+
 .content{
     display: flex
 }
